--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,31 @@
-# Configuración de la base de datos Oracle
+# 🔗 Configuración de DNO-Oracle
 # Copia este archivo a .env y configura tus valores
 
-# Usuario de la base de datos
-USER=tu_usuario_oracle
+# === CONEXIÓN PRINCIPAL ===
+# Esta es la conexión por defecto que se usará si no se especifica otra
+DB_USER=tu_usuario_oracle
+DB_PASSWORD=tu_password_oracle
+DB_HOST=localhost
+DB_PORT=1521
+DB_SERVICE=XE
+DB_SCHEMA=APP_SCHEMA
 
-# Contraseña del usuario
-PASSWORD=tu_password_oracle
+# === CONFIGURACIÓN DEL POOL DE CONEXIONES ===
+POOL_MAX=20
+POOL_MIN=5
+POOL_INCREMENT=2
+POOL_TIMEOUT=4
 
-# Cadena de conexión
-# Formatos soportados:
-# - host:puerto/servicio (ej: localhost:1521/XE)
-# - IP:puerto/servicio (ej: 192.168.1.100:1521/desa)
-# - TNS completo (ej: (DESCRIPTION=(ADDRESS=...)))
-CONNECTIONSTRING=localhost:1521/XE
+# === CONFIGURACIÓN DEL SERVIDOR ===
+PORT=8000
+LOG_LEVEL=INFO
 
-# Número máximo de conexiones en el pool
-POOL=10
+# === MODO DE FUNCIONAMIENTO ===
+# true = Solo API (sin interfaz web)
+# false = API + Interfaz Web completa
+API_ONLY=false
 
+# === ORACLE INSTANT CLIENT ===
 # Ruta a las librerías de Oracle Instant Client
 # Ejemplos comunes:
 # Linux: /opt/oracle/instantclient_21_10
@@ -25,6 +34,22 @@ POOL=10
 # Windows: C:\instantclient_21_10
 LIB_ORA=/ruta/a/instantclient
 
-# Configuración opcional para desarrollo
+# === CONFIGURACIÓN OPCIONAL ===
+# Configuración para desarrollo y depuración
 # DEBUG=oracle
 # NODE_ENV=development
+
+# === MÚLTIPLES CONEXIONES ===
+# Para usar múltiples conexiones, crea el archivo config/databases.json
+# Si databases.json existe, se usará para múltiples conexiones
+# Si no existe, se usará solo la conexión principal definida arriba
+
+# === CONFIGURACIÓN DE CACHE ===
+# CACHE_ENABLED=true
+# CACHE_TTL=600
+# CACHE_MAX_SIZE=2000
+
+# === CONFIGURACIÓN DE SEGURIDAD ===
+# CORS_ORIGIN=*
+# MAX_REQUEST_SIZE=10MB
+# RATE_LIMIT=1000
